--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="icon" href="../static/favicon.png" type="image/x-icon" />
-    <title>Elm Empty Project</title>
+    <title>Friday</title>
   </head>
 
   <body class="bg-gray-800">
